--- a/templates/app_pages/signin.html
+++ b/templates/app_pages/signin.html
@@ -1,4 +1,4 @@
-{% extends 'main/main.html' %} {% load static %} {% load socialaccount %} <br />
+{% extends 'main/main.html' %} {% load static %} {% load static %} <br />
 {% block content %}
 <title>Login</title>
 <div class="container py-5 py-2">
